--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,9 @@ wasm-opt = false
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+]
