--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --colors"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "hello-wasm-pack": "^0.1.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
