--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ wasm-opt = false
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+lto = true
 
 [dependencies.web-sys]
 version = "0.3"
