--- a/www/package.json
+++ b/www/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/rustwasm/create-wasm-app#readme",
   "dependencies": {
-    "nes.css": "^2.3.0",
     "wasm-game-of-life": "file:../pkg"
   },
   "devDependencies": {
@@ -36,8 +35,10 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "hello-wasm-pack": "^0.1.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-loader": "v1.3",
+    "html-webpack-plugin": "^4.5.2",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
